--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
     "private": true,
     "dependencies": {
         "@material-ui/icons": "^1.0.0-beta.42",
+        "axios": "^0.18.0",
+        "dotenv": "^5.0.1",
         "material-ui": "^1.0.0-beta.42",
         "moment": "^2.22.1",
         "moment-timezone": "^0.5.16",
         "react": "^16.3.2",
         "react-dom": "^16.3.2",
-        "react-moment": "^0.7.0",
-        "react-scripts-cssmodules": "^1.1.10"
+        "react-redux": "^5.0.7",
+        "react-scripts-cssmodules": "^1.1.10",
+        "redux": "^4.0.0",
+        "redux-saga": "^0.16.0",
+        "redux-thunk": "^2.2.0"
     },
     "scripts": {
         "start": "react-scripts start",
