--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "extends": "react-app",
     "devDependencies": {
         "eslint": "^4.19.1",
-        "eslint-plugin-react": "^7.7.0"
+        "eslint-plugin-react": "^7.7.0",
+        "gh-pages": "^1.1.0"
     }
 }
